--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+
+    <!-- Copy from https://getbootstrap.com/ for CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Should be placed under bootstrap (the last one) -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -12,8 +17,93 @@
 
     <main>
 
+        <!--
+            #1 Remove style from the div card
+            #1.1 Insert into CSS
+            #2 Give a unique or class to every card
+            #3 Change the btn class from a tag inside of the card
+            #4 Insert a background picture to aside
+            style="width: 18rem;"
+        -->
+
+        <!-- CONTACT SECTION -->
+        <section class="education" id="education">
+            <h2>
+                Education
+            </h2>
+
+            <!-- TAMWOOD CARD -->
+            <div class="card" id="tamwood-card">
+                <!-- <img src="..." class="card-img-top" alt="..."> -->
+                <aside></aside>
+                <div class="card-body">
+                    <h5 class="card-title">
+                        Tamwood College
+                    </h5>
+                    <p class="card-text">
+                        Ability to design and code interactive client-facing websites using HTML, CSS, and JavaScript.
+                    </p>
+                    <a href="https://tamwood.com/careers/web-developer/" target="_blank" class="btn">
+                        Web Development
+                    </a>
+                </div>
+            </div>
+
+            <!-- CHULA CARD -->
+            <div class="card" id="chula-card">
+                <aside></aside>
+                <div class="card-body">
+                    <h5 class="card-title">
+                        Chulalongkorn University
+                    </h5>
+                    <p class="card-text">
+                        Offers two comprehensive programs of study in Computer Science and Information Technology, namely, masters and doctoral programs.  
+                    </p>
+                    <a href="https://www.it.chula.ac.th/en/" target="_blank" class="btn">
+                        Information and Tech
+                    </a>
+                </div>
+            </div>
+
+            <!-- SEOUL CARD -->
+            <div class="card" id="seoul-card">
+                <aside></aside>
+                <div class="card-body">
+                    <h5 class="card-title">
+                        Seoul National University
+                    </h5>
+                    <p class="card-text">
+                        Offers a unique educational opportunity for students to achieve excellence in both scientific discovery and technological innovation. 
+                    </p>
+                    <a href="https://en.seoultech.ac.kr/" target="_blank" class="btn">
+                        Institue of Technology
+                    </a>
+                </div>
+            </div>
+
+            <!-- SEOUL CARD -->
+            <div class="card" id="unam-card">
+                <aside></aside>
+                <div class="card-body">
+                    <h5 class="card-title">
+                        Unam University
+                    </h5>
+                    <p class="card-text">
+                        Offers training of engineering professionals through courses, diploma courses, workshops and conferences.
+                    </p>
+                    <a href="https://www.ingenieria.unam.mx/EN/" target="_blank" class="btn">
+                        School of Engineering
+                    </a>
+                </div>
+            </div>
+        </section>
+
         <!-- CONTACT SECTION -->
         <section class="contact" id="contact">
+            <h2>
+                Contact
+            </h2>
+
             <form>
                 <div>
                     <label for="fullname">Full Name:</label>
@@ -35,16 +125,21 @@
                     <textarea placeholder="Message" required></textarea>
                 </div>
 
-                <input type="submit" value="Send Message">
-                <input type="reset" value="Clear">
+                <div class="d-flex">
+                    <input type="submit" value="Send Message" class="btn">
+                    <input type="reset" value="Clear" class="btn">
+                </div>
             </form>
         </section>
 
     </main>
     
     <footer id="footer" class="footer">
-        &copy; <span>Your Site Name.</span> All rihts reserved. Designed by <span>Jules</span>
+        &copy; <span>Your Site Name.</span> All rights reserved. Designed by <span>Jules</span>
     </footer>
+
+    <!-- Copy from https://getbootstrap.com/ JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
