skills section done

--- a/index.html
+++ b/index.html
@@ -26,6 +26,38 @@
             style="width: 18rem;"
         -->
 
+        <!-- SKILLS SECTION -->
+        <section class="skills" id="skills">
+            <h2>
+                Skills
+            </h2>
+        
+            <!-- HTML5 -->
+            <div id="html5" class="d-flex">
+                <aside></aside>
+                <p>
+                    Build HTML5 websites and defining basic structure and using sematics HTML properly. Building a properly menu, tables, and forms.
+                </p>
+            </div>
+
+            <div id="css" class="d-flex">
+                <p>
+                    Using CSS to apply styling to the website by using tag, classes, and id selector. Plus, building a responsive website, using @media query selector.
+                    <!-- Using to change the size, colors, and formats of the elments. It is also possible to insert background (Pictures of colors). -->
+                </p>
+                <aside></aside>
+            </div>
+
+            <div id="javascript" class="d-flex">
+                <aside></aside>
+                <p>
+                    Using to create/control dynamic website content, i.e. anything that moves, refreshes, or otherwise changes a screen without requiring to manually reload a web page.
+                </p>
+
+            </div>
+
+        </section>
+
         <!-- CONTACT SECTION -->
         <section class="education" id="education">
             <h2>
