Projects first part

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Copy from https://getbootstrap.com/ for CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Should be placed under bootstrap (the last one) -->
+    <!-- Should be placed under bootstrap (**the last one**) -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -25,6 +25,33 @@
             #4 Insert a background picture to aside
             style="width: 18rem;"
         -->
+
+        <!-- PROJECTS SECTION -->
+        <section class="projects" id="projects">
+
+            <!-- ACCORDION WRAPPER -->
+            <div class="accordion" id="ProjectWrapper">
+
+                <!-- FIRST PROJECT -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#ProjectOne" aria-expanded="true" aria-controls="collapseTwo">
+                            Personal Portfolio - HTML and CSS
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingTwo" data-bs-parent="#ProjectWrapper">
+                        <div class="accordion-body">
+                            <p>
+                                <strong>This was my first HTML and CSS Project.</strong> I had to work 5 days to build 4 pages of my portfolio, talking about my sklls, education, background experience, and projects Despite that this was my first project, I have improved way more.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- END OF ACCORDION WAPPER -->
+
+            </div>
+
+        </section>
 
         <!-- SKILLS SECTION -->
         <section class="skills" id="skills">
