Projects step done

--- a/index.html
+++ b/index.html
@@ -28,26 +28,79 @@
 
         <!-- PROJECTS SECTION -->
         <section class="projects" id="projects">
+            <h2>
+                Projects
+            </h2>
 
             <!-- ACCORDION WRAPPER -->
             <div class="accordion" id="ProjectWrapper">
 
                 <!-- FIRST PROJECT -->
                 <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingTwo">
-                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#ProjectOne" aria-expanded="true" aria-controls="collapseTwo">
+                    <h2 class="accordion-header" id="headingone">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#projectone" aria-expanded="false" aria-controls="collapseone">
                             Personal Portfolio - HTML and CSS
                         </button>
                     </h2>
-                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingTwo" data-bs-parent="#ProjectWrapper">
+                    <div id="projectone" class="accordion-collapse collapse" aria-labelledby="headingone" data-bs-parent="#projectwrapper">
                         <div class="accordion-body">
+                            <aside>
+                                #1 Screenshot
+                            </aside>
                             <p>
                                 <strong>This was my first HTML and CSS Project.</strong> I had to work 5 days to build 4 pages of my portfolio, talking about my sklls, education, background experience, and projects Despite that this was my first project, I have improved way more.
                             </p>
+                            <a href="https:github.com" target="_blank" class="btn">
+                                Porfolio Repository
+                            </a>
                         </div>
                     </div>
                 </div>
                 <!-- END OF ACCORDION WAPPER -->
+
+                <!-- SECOND PROJECTS -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingtwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#projecttwo" aria-expanded="false" aria-controls="collapsetwo">
+                            Responsive Website - HTML and CSS
+                        </button>
+                    </h2>
+                    <div id="projecttwo" class="accordion-collapse collapse" aria-labelledby="headingtwo" data-bs-parent="#projectwrapper">
+                        <div class="accordion-body">
+                            <aside>
+                                #2 Screenshot
+                            </aside>
+                            <p>
+                                <strong>This was my second HTML and CSS Project.</strong> I built a company service webiste, including responsive version of the company's website. I also included a form to user send message.
+                            </p>
+                            <a href="https:github.com" target="_blank" class="btn">
+                                Porfolio Repository
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- THIRD PROJECTS -->
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingthree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#projectthree" aria-expanded="false" aria-controls="collapsethree">
+                            Final Exam - HTML and CSS
+                        </button>
+                    </h2>
+                    <div id="projectthree" class="accordion-collapse collapse" aria-labelledby="headingthree" data-bs-parent="#projectwrapper">
+                        <div class="accordion-body">
+                            <aside>
+                                #3 Screenshot
+                            </aside>
+                            <p>
+                                <strong>This was my advanced CSS fnal exam.</strong> I was able to create a single page, using CSS Proprocessor. Nesting CSS, classes, ids, tags, and so on.
+                            </p>
+                            <a href="https:github.com" target="_blank" class="btn">
+                                Porfolio Repository
+                            </a>
+                        </div>
+                    </div>
+                </div>
 
             </div>
 
