--- a/index.html
+++ b/index.html
@@ -26,6 +26,137 @@
             style="width: 18rem;"
         -->
 
+        <!-- HEADER SECTION -->
+        <header class="header" id="header">
+
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="/image/xml-bg.jpg" class="d-block w-100" alt="XML Code">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="/image/react-bg.jpg" class="d-block w-100" alt="React Code">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="/image/scss-pexels.jpg" class="d-block w-100" alt="SCSS Code">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+
+        </header>
+
+        <!-- ABOUT SECTION -->
+        <section class="about" id="about">
+            <h2>
+                About Me
+            </h2>
+            <!-- What do you feel when working with many people? -->
+            <p>
+                I always feel motivated to push myself to not just provide results, but also help my teammates to achieve hgher goals.
+            </p>
+            <!-- When you face a challenge or an issue, what do you do to solve it?-->
+            <p>
+                When I face a challenge, I usuall do some research on how to sole the situation with the better approach. If I am not certain or cannot solve it, I request assistance from my leader.
+            </p>
+            <!-- When you solved IT last problem, what was the most thing you have learnt? -->
+            <p>
+                Last time I had problems with a code, I realized that making comments about every setion, can avoid further mistakes that might face.
+            </p>
+            <!-- What project you have done you are more proud of it? -->
+            <p>
+                There is a project where I couldl learn way more about JavaScript, arrays, random number, and other calculations. With that, the user will be able to set several numbers and the software dekivered data and metadata about the array of numbers and the numbers themselves.
+            </p>
+        </section>
+
+        <!-- WORK EXPERIENCES SECTION -->
+        <section class="work-experience d-flex flex-column" id="work-experience">
+            <h2>
+                Experiences
+            </h2>
+            <article class="first-job">
+                <h3>
+                    Google - Web Developer
+                </h3>
+                <h6>
+                    Jul 2017 to Dec 2019
+                </h6>
+                <p>
+                    <ol>
+                        <li>
+                            Worked with the team leader to build responsive projects, usig Preprocessors, Bootstrap, and Google Fonts
+                        </li>
+                        <li>
+                            Planned ahead every projects, using JIRA software and Google SaaS.
+                        </li>
+                        <li>
+                            Worked with multiple clients to build cloud services and projects.
+                        </li>
+                        <li>
+                            Have fun!
+                        </li>
+                    </ol>
+                </p>
+            </article>
+
+            <article class="second-job">
+                <h3>
+                    Microsoft - Remote ASP .NET Developers
+                </h3>
+                <h6>
+                    Jan 2020 to Dec 2020
+                </h6>
+                <p>
+                    <ol>
+                        <li>
+                            Deployed projects following the Microsoft Project Manager software, following the due dates.
+                        </li>
+                        <li>
+                            Planned and scheduled meeting with prospective clients.
+                        </li>
+                        <li>
+                            Building different projects allowed me to work with different Version Control Software
+                        </li>
+                        <li>
+                            Managed microservices and deployed to Azure account.
+                        </li>
+                    </ol>
+                </p>
+            </article>
+
+            <article class="third-job">
+                <h3>
+                    Apple - App Developers
+                </h3>
+                <h6>
+                    Mar 2021 to Jan 2022
+                </h6>
+                <p>
+                    <ol>
+                        <li>
+                            Established due date to every project cycle, following the set scheduled. 
+                        </li>
+                        <li>
+                            Followed the UML set by the Leader Engineer and apply those standards.
+                        </li>
+                        <li>
+                           Used Swift to code and deployed part of the project to the branch. 
+                        </li>
+                        <li>
+                            Applied standard tesing rules to the deployed apps.
+                        </li>
+                    </ol>
+                </p>
+            </article>
+        </section>
+
         <!-- PROJECTS SECTION -->
         <section class="projects" id="projects">
             <h2>
